# gemstones

./: .gitignore  CMakeLists.txt  README  README.md
include/gemstones/: core.h
src/: CMakeLists.txt  unicode.cpp
src/.cache/clangd/index/: all_test.cpp.398A10805C79E700.idx  core.cpp.6D123B5094F45946.idx  core.h.D27515F4F8C1E1E3.idx
src/core/: CMakeLists.txt  all_test.cpp  core.cpp  core.h
